--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Aerial by HTML5 UP</title>
+		<title>Charmaine Bonifacio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -26,11 +26,11 @@
 						<p>Modeller and GIS Analyst &nbsp;&bull;&nbsp; Geographer &nbsp;&bull;&nbsp; MSc</p>
 						<nav>
 							<ul>
+								<li><a href="http://www.twitter.com/charmtbonifacio" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://ca.linkedin.com/in/charmainebonifacio" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://www.researchgate.net/profile/Charmaine_Bonifacio" class="icon fa-book"><span class="label">Research Gate</span></a></li>
 								<li><a href="https://uleth.academia.edu/charmainebonifacio" class="icon fa-paper-plane-o"><span class="label">Academic Edu</span></a></li>
 								<li><a href="https://www.github.com/charmainebonifacio" class="icon fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
